<resources>
    <string name="app_name" translatable="false">WunderLINQ</string>
    <string name="automotive_app_desc" translatable="false">WunderLINQ</string>
    <string name="widget_datagrid_name" translatable="false">WunderLINQ Data Grid</string>
    <string name="product" translatable="false">WunderLINQ</string>
    <string name="company_name" translatable="false">Black Box Embedded, LLC</string>
    <string name="device_name" translatable="false">WunderLINQ</string>
    <string name="firstrun_start">The WunderLINQ requires a lot of permissions to enable all the cool features the app provides.  On the next few screens we will explain the need for each permission request.
        You will only be presented with these screens this one time.  If you need to enable certain permissions after, you will need to go into Android Settings and enable them.</string>
    <string name="firstrun_navapp_body">Select your preferred Navigation App. Level of WunderLINQ support varies, for more details see the following page: https://blackboxembedded.com/pages/integrations</string>
    <string name="firstrun_end">Thank you for purchasing the WunderLINQ!  Ride Safe.</string>
    <string name="firstrun_button_ok">Agree</string>
    <string name="firstrun_button_skip">Disagree</string>
    <string name="accessibilityservice_alert_title">WunderLINQ needs to run a Accessibility Service</string>
    <string name="accessibilityservice_alert_body">The WunderLINQ app uses an Accessibility service to enable Picture-in-Picture launching.</string>
    <string name="camera_alert_title">WunderLINQ needs permissions to use your camera</string>
    <string name="camera_alert_body">The WunderLINQ app needs access to your camera to take pictures and record video.</string>
    <string name="call_alert_title">WunderLINQ needs permissions to use your phone to make phone calls</string>
    <string name="call_alert_body">The WunderLINQ app needs access to phone to initiate calls.</string>
    <string name="contacts_alert_title">WunderLINQ needs permissions to use read your contacts</string>
    <string name="contacts_alert_body">The WunderLINQ app needs access to your contacts to list them for dialing.</string>
    <string name="record_audio_alert_title">WunderLINQ needs permissions to record audio</string>
    <string name="record_audio_alert_body">The WunderLINQ app needs access to your microphone to record video audio.</string>
    <string name="location_alert_title">WunderLINQ needs location permission</string>
    <string name="location_alert_body">The WunderLINQ app needs access to your location to allow background track recording and data logging.
        Location permission is also used for data points such as elevation, GPS speed, and bearing.</string>
    <string name="btconnect_alert_title">WunderLINQ needs Bluetooth permission</string>
    <string name="btconnect_alert_body">The WunderLINQ app needs the ability to connect to the WunderLINQ Hardware.</string>
    <string name="write_alert_title">WunderLINQ needs write permission</string>
    <string name="write_alert_body">The WunderLINQ app needs access to write files for track logging and photos.</string>
    <string name="phone_state_alert_title">WunderLINQ needs phone state permission</string>
    <string name="phone_state_alert_body">The WunderLINQ app needs phone state permissions for the cellular signal strength data point.</string>
    <string name="overlay_alert_title">WunderLINQ needs overlay permission</string>
    <string name="overlay_alert_body">The WunderLINQ app needs overlay permissions for background video recording.</string>
    <string name="notification_alert_title">WunderLINQ needs notification access</string>
    <string name="notification_alert_body">The WunderLINQ app needs notification access so that it can control your music player.</string>
    <string name="negative_alert_title">Functionality limited</string>
    <string name="negative_location_alert_body">Since location access has not been granted, this app will not be able to save waypoints or log your location.</string>
    <string name="negative_btconnect_alert_body">Since Bluetooth permission has not been granted, this app will not be able to connect to the WunderLINQ hardware.</string>
    <string name="negative_write_alert_body">Since write access has not been granted, this app will not be able to save files.</string>
    <string name="negative_camera_alert_body">Since camera access has not been granted, this app will not be able to take photos or videos.</string>
    <string name="negative_contacts_alert_body">Since contact access has not been granted, this app will not be able to display or call your contacts.</string>
    <string name="negative_call_alert_body">Since phone access has not been granted, this app will not be able to place phone calls.</string>
    <string name="negative_microphone_alert_body">Since microphone access has not been granted, this app will not be able to record videos.</string>
    <string name="negative_record_audio_alert_body">Since audio recording access has not been granted, this app will not be able to record videos.</string>
    <string name="negative_phone_state_alert_body">Since phone state access has not been granted, this app will not be able to display your signal strength.</string>
    <string name="usagestats_alert_title">WunderLINQ needs usage stat access</string>
    <string name="usagestats_alert_body">The WunderLINQ app needs access to usage stats for auto launch of the app when the WunderLINQ device is connected.</string>
    <string name="main_title">Motorcycle</string>
    <string name="blank_field" translatable="false">∞</string>
    <string name="no_pairing_alert_title">No paired WunderLINQ</string>
    <string name="no_pairing_alert_body">No paired WunderLINQ.  Please pair to your WunderLINQ under your Bluetooth Settings.</string>
    <string name="too_many_pairings_alert_title">More than one paired WunderLINQ</string>
    <string name="too_many_pairings_alert_body">More than one paired WunderLINQ.  Please remove old pairings under your Bluetooth Settings.</string>
    <string name="disclaimer_alert_title">WARNING!</string>
    <string name="disclaimer_alert_body">
        Do not attempt to enter route information or adjust the WunderLINQ while driving.
        Failure to pay full attention to the operation of your vehicle could result in death, serious injury, or property damage.
        You assume total responsibility and risk for using this device.
    </string>
    <string name="disclaimer_ok">I agree</string>
    <string name="disclaimer_quit">Quit</string>
    <string name="bt_not_supported">BLE is not supported</string>
    <string name="rdc_front_label">Front Tire</string>
    <string name="rdc_rear_label">Rear Tire</string>
    <string name="engine_temp_label">Engine Temp</string>
    <string name="ambient_temp_label">Ambient Temp</string>
    <string name="odometer_label">Odometer</string>
    <string name="trip1_label">Trip 1</string>
    <string name="trip2_label">Trip 2</string>
    <string name="tripauto_label">Trip Auto</string>
    <string name="voltage_label">Voltage</string>
    <string name="throttle_label">Throttle</string>
    <string name="gear_label">Gear</string>
    <string name="frontbrakes_label">Front Brakes</string>
    <string name="rearbrakes_label">Rear Brakes</string>
    <string name="ambientlight_label">Ambient Light</string>
    <string name="speed_label">Speed</string>
    <string name="avgspeed_label">Avg Speed</string>
    <string name="cconsumption_label">Consumption</string>
    <string name="fueleconomyone_label">Economy 1</string>
    <string name="fueleconomytwo_label">Economy 2</string>
    <string name="fuelrange_label">Range</string>
    <string name="bike_info_label">Bike Info</string>
    <string name="geodata_label">Trips &amp; Waypoints</string>
    <string name="appsettings_label">App Settings</string>
    <string name="hwsettings_label">HW Settings</string>
    <string name="info_label">About</string>
    <string name="close_label">Close</string>
    <string name="bike_info_title">Bike Info</string>
    <string name="vin_label">VIN</string>
    <string name="next_service_date_label">Next Service Date</string>
    <string name="next_service_label">Next Service</string>
    <string name="waypoint_view_tv_date_label">Date Recorded</string>
    <string name="waypoint_view_tv_lat_label">Latitude</string>
    <string name="waypoint_view_tv_lon_label">Longitude</string>
    <string name="waypoint_view_tv_label_label">Label</string>
    <string name="waypoint_view_label_hint">Waypoint Label</string>
    <string name="waypoint_view_bt_navigate">Navigate</string>
    <string name="waypoint_view_bt_open">Open in Map App</string>
    <string name="waypoint_view_bt_share">Share</string>
    <string name="waypoint_view_bt_delete">Delete</string>
    <string name="info_title">Personal Information</string>
    <string name="pref_homeAddress_name">Home Address</string>
    <string name="pref_homeAddress_summary">Format: 12345 Street, City, State 12345</string>
    <string name="pref_homePhone_name">Favorite Phone Number</string>
    <string name="pref_homePhone_summary">Format: 11234567890</string>
    <string name="ui_title">User Interface</string>
    <string name="pref_tasks_settings_title">Quick Task Customization</string>
    <string name="pref_tasks_settings_summary">Customize which tasks to display and in which order</string>
    <string name="pref_task_one" translatable="false">@string/first</string>
    <string name="pref_task_two" translatable="false">@string/second</string>
    <string name="pref_task_three" translatable="false">@string/third</string>
    <string name="pref_task_four" translatable="false">@string/fourth</string>
    <string name="pref_task_five" translatable="false">@string/fifth</string>
    <string name="pref_task_six" translatable="false">@string/sixth</string>
    <string name="pref_task_seven" translatable="false">@string/seventh</string>
    <string name="pref_task_eight" translatable="false">@string/eighth</string>
    <string name="pref_task_nine" translatable="false">@string/ninth</string>
    <string name="pref_task_ten" translatable="false">@string/tenth</string>
    <string name="pref_task_eleven" translatable="false">@string/eleventh</string>
    <string name="pref_tempf_name">Temperature Unit</string>
    <string name="pref_distance_name">Distance Unit</string>
    <string name="pref_bearing_name">Bearing Unit</string>
    <string name="pref_pressuref_name">Pressure Unit</string>
    <string name="pref_orientation_name">Orientation Lock</string>
    <string name="pref_brightness_name">Display Brightness</string>
    <string name="pref_brightness_summary">Sets the devices brightness to the max.</string>
    <string name="pref_nightMode_name">Night Mode</string>
    <string name="pref_autoNightModeDelay_name">Auto Night Mode Delay</string>
    <string name="pref_autoNightModeDelay_summary">Set Auto Night Mode Delay In Seconds</string>
    <string name="alerting_title">Alert Settings</string>
    <string name="pref_tpmsAlert_name">Custom Tire Pressure Threshold</string>
    <string name="pref_tpmsAlert_summary">Use a custom threshold for low tire pressure alerting</string>
    <string name="pref_tpmsAlertThreshold_name">Low Tire Pressure Threshold</string>
    <string name="pref_tpmsAlertThreshold_summary">Specify a number based on your unit selection</string>
    <string name="pref_fuelAlert_name">Fuel Routing</string>
    <string name="pref_fuelAlert_summary">Prompt to route to nearest fuel station when low fuel fault is present</string>
    <string name="debug_settings_title">Debug Settings</string>
    <string name="advanced_settings_title">Advanced Settings</string>
    <string name="share">Share</string>
    <string name="share_gpx">Share GPX</string>
    <string name="delete">Delete</string>
</resources>