<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="prefScreenRoot">
    <PreferenceCategory android:title="@string/info_title" >
        <EditTextPreference
            android:title="@string/pref_homeAddress_name"
            android:summary="@string/pref_homeAddress_summary"
            android:inputType="textPostalAddress"
            android:key="prefHomeAddress" />
        <EditTextPreference
            android:title="@string/pref_homePhone_name"
            android:summary="@string/pref_homePhone_summary"
            android:inputType="phone"
            android:key="prefHomePhone" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/ui_title" >
        <ListPreference
            android:key="prefMotorcycleType"
            android:title="@string/pref_bike_type"
            android:summary="%s"
            android:entries="@array/bike_type_array"
            android:entryValues="@array/bike_type_arrayValues"
            android:defaultValue="0"
            />
        <PreferenceScreen
            android:key="prefScreenTasks"
            android:title="@string/pref_tasks_settings_title"
            android:summary="@string/pref_tasks_settings_summary">
            <ListPreference
                android:key="prefQuickTaskOne"
                android:title="@string/pref_task_one"
                android:summary="%s"
                android:entries="@array/tasks_array"
                android:entryValues="@array/tasks_arrayValues"
                android:defaultValue="1"
                />
            <ListPreference
                android:key="prefQuickTaskTwo"
                android:title="@string/pref_task_two"
                android:summary="%s"
                android:entries="@array/tasks_array"
                android:entryValues="@array/tasks_arrayValues"
                android:defaultValue="2"
                />
            <ListPreference
                android:key="prefQuickTaskThree"
                android:title="@string/pref_task_three"
                android:summary="%s"
                android:entries="@array/tasks_array"
                android:entryValues="@array/tasks_arrayValues"
                android:defaultValue="3"
                />
            <ListPreference
                android:key="prefQuickTaskFour"
                android:title="@string/pref_task_four"
                android:summary="%s"
                android:entries="@array/tasks_array"
                android:entryValues="@array/tasks_arrayValues"
                android:defaultValue="4"
                />
            <ListPreference
                android:key="prefQuickTaskFive"
                android:title="@string/pref_task_five"
                android:summary="%s"
                android:entries="@array/tasks_array"
                android:entryValues="@array/tasks_arrayValues"
                android:defaultValue="5"
                />
            <ListPreference
                android:key="prefQuickTaskSix"
                android:title="@string/pref_task_six"
                android:summary="%s"
                android:entries="@array/tasks_array"
                android:entryValues="@array/tasks_arrayValues"
                android:defaultValue="6"
                />
            <ListPreference
                android:key="prefQuickTaskSeven"
                android:title="@string/pref_task_seven"
                android:summary="%s"
                android:entries="@array/tasks_array"
                android:entryValues="@array/tasks_arrayValues"
                android:defaultValue="7"
                />
            <ListPreference
                android:key="prefQuickTaskEight"
                android:title="@string/pref_task_eight"
                android:summary="%s"
                android:entries="@array/tasks_array"
                android:entryValues="@array/tasks_arrayValues"
                android:defaultValue="8"
                />
            <ListPreference
                android:key="prefQuickTaskNine"
                android:title="@string/pref_task_nine"
                android:summary="%s"
                android:entries="@array/tasks_array"
                android:entryValues="@array/tasks_arrayValues"
                android:defaultValue="9"
                />
            <ListPreference
                android:key="prefQuickTaskTen"
                android:title="@string/pref_task_ten"
                android:summary="%s"
                android:entries="@array/tasks_array"
                android:entryValues="@array/tasks_arrayValues"
                android:defaultValue="10"
                />
            <ListPreference
                android:key="prefQuickTaskEleven"
                android:title="@string/pref_task_eleven"
                android:summary="%s"
                android:entries="@array/tasks_array"
                android:entryValues="@array/tasks_arrayValues"
                android:defaultValue="11"
                />
        </PreferenceScreen>
        <!--
        <ListPreference
            android:key="prefNavApp"
            android:title="@string/pref_nav_app"
            android:summary="%s"
            android:entries="@array/nav_apps_array"
            android:entryValues="@array/nav_apps_arrayValues"
            android:defaultValue="0"
            />
            -->
        <ListPreference
            android:key="prefPressureF"
            android:title="@string/pref_pressuref_name"
            android:summary="%s"
            android:entries="@array/pressuref_array"
            android:entryValues="@array/pressuref_arrayValues"
            android:defaultValue="0"
            />
        <ListPreference
            android:key="prefTempF"
            android:title="@string/pref_tempf_name"
            android:summary="%s"
            android:entries="@array/tempf_array"
            android:entryValues="@array/tempf_arrayValues"
            android:defaultValue="0"
            />
        <ListPreference
            android:key="prefDistance"
            android:title="@string/pref_distance_name"
            android:summary="%s"
            android:entries="@array/distance_array"
            android:entryValues="@array/distance_arrayValues"
            android:defaultValue="0"
            />
        <ListPreference
            android:key="prefBearing"
            android:title="@string/pref_bearing_name"
            android:summary="%s"
            android:entries="@array/bearing_array"
            android:entryValues="@array/bearing_arrayValues"
            android:defaultValue="0"
            />
        <!--
        <ListPreference
            android:key="prefContactSorting"
            android:title="@string/pref_contact_name"
            android:summary="%s"
            android:entries="@array/contact_sort_array"
            android:entryValues="@array/contact_sort_arrayValues"
            android:defaultValue="0"
            />
            -->
        <ListPreference
            android:key="prefOrientation"
            android:title="@string/pref_orientation_name"
            android:summary="%s"
            android:entries="@array/orientation_array"
            android:entryValues="@array/orientation_arrayValues"
            android:defaultValue="0"
            />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefBrightnessOverride"
            android:summary="@string/pref_brightness_summary"
            android:title="@string/pref_brightness_name" >
        </CheckBoxPreference>
        <ListPreference
            android:key="prefNightModeCombo"
            android:title="@string/pref_nightMode_name"
            android:summary="%s"
            android:entries="@array/night_mode_array"
            android:entryValues="@array/night_mode_arrayValues"
            android:defaultValue="0"
            />
        <EditTextPreference
            android:title="@string/pref_autoNightModeDelay_name"
            android:summary="@string/pref_autoNightModeDelay_summary"
            android:defaultValue="30"
            android:inputType="number"
            android:key="prefAutoNightModeDelay" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/alerting_title" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefTPMSAlert"
            android:summary="@string/pref_tpmsAlert_summary"
            android:title="@string/pref_tpmsAlert_name" >
        </CheckBoxPreference>
        <EditTextPreference
            android:dependency="prefTPMSAlert"
            android:title="@string/pref_tpmsAlertThreshold_name"
            android:summary="@string/pref_tpmsAlertThreshold_summary"
            android:defaultValue="30"
            android:inputType="number"
            android:key="prefTPMSAlertThreshold" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefFuelAlert"
            android:summary="@string/pref_fuelAlert_summary"
            android:title="@string/pref_fuelAlert_name" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/advanced_settings_title" >
        <Preference android:title="@string/pref_btn_sendlogs_title"
            android:key="prefSendLog"
            android:summary="@string/pref_btn_sendlogs_summary"/>
        <Preference android:title="@string/pref_btn_version_title"
            android:key="prefVersion"
            android:summary=""/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/debug_settings_title"
        android:key="prefDebugCategory">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefDataLogging"
            android:summary="@string/pref_dataLogging_summary"
            android:title="@string/pref_dataLogging_name" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefShowRaw"
            android:summary="@string/pref_showRaw_summary"
            android:title="@string/pref_showRaw_name" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefShowUartFaults"
            android:summary="@string/pref_showUartFaults_summary"
            android:title="@string/pref_showUartFaults_name" >
        </CheckBoxPreference>
    </PreferenceCategory>
</PreferenceScreen>