<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_cog"
        android:title="@string/appsettings_label"
        app:showAsAction="always|withText"/>
    <item android:id="@+id/action_hwsettings"
        android:icon="@drawable/ic_cog"
        android:title="@string/hwsettings_label"
        app:showAsAction="always|withText"/>
    <item android:id="@+id/action_debug"
        android:icon="@drawable/ic_cog"
        android:title="@string/hwdebug_label"
        app:showAsAction="always|withText"/>
    <item android:id="@+id/action_about"
        android:icon="@drawable/ic_info_circle"
        android:title="@string/info_label"
        app:showAsAction="always|withText"/>
    <item android:id="@+id/action_exit"
        android:icon="@drawable/ic_window_close"
        android:title="@string/close_label"
        app:showAsAction="always|withText"/>
</menu>