<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_waypoint_view"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        map:layout_constraintBottom_toTopOf="@+id/llDate"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llDate"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/llLatLabel">

        <TextView
            android:id="@+id/tvDateLabel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/waypoint_view_tv_date_label"
            android:textColor="?attr/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="viewStart"
            android:textColor="?attr/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLatLabel"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/llDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/llLonLabel">

        <TextView
            android:id="@+id/tvLatLabel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/waypoint_view_tv_lat_label"
            android:textColor="?attr/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvLatitude"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="viewStart"
            android:textColor="?attr/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLonLabel"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/llLatLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/llLabelLabel">

        <TextView
            android:id="@+id/tvLonLabel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/waypoint_view_tv_lon_label"
            android:textColor="?attr/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvLongitude"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="viewStart"
            android:textColor="?attr/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLabelLabel"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/llLonLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonShare">

        <TextView
            android:id="@+id/tvLabelLabel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/waypoint_view_tv_label_label"
            android:textColor="?attr/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/tvLabel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/waypoint_view_label_hint"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:text=""
            android:textAlignment="viewStart"
            android:background="?attr/backgroundColor"
            android:textColor="?attr/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonShare"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:onClick="onClickShare"
        android:background="?attr/buttonColor"
        android:textColor="?attr/buttonTextColor"
        android:text="@string/waypoint_view_bt_share"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/llLabelLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonNavigate"/>

    <Button
        android:id="@+id/buttonNavigate"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:onClick="onClickNav"
        android:background="?attr/buttonColor"
        android:textColor="?attr/buttonTextColor"
        android:text="@string/waypoint_view_bt_navigate"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonShare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonOpen"/>

    <Button
        android:id="@+id/buttonOpen"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:onClick="onClickOpen"
        android:background="?attr/buttonColor"
        android:textColor="?attr/buttonTextColor"
        android:text="@string/waypoint_view_bt_open"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonNavigate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelete"/>

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:onClick="onClickDelete"
        android:background="?attr/buttonColor"
        android:textColor="?attr/buttonTextColor"
        android:text="@string/waypoint_view_bt_delete"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonOpen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>